--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,3 +1,9 @@
-<% provide(:title, 'Home') %>
-<h1>Fred</h1>
-<p>This is the home page for Fred.</p>
+<div class="center hero-unit">
+  <h1>Fred says Hello</h1>
+
+  <h2>
+    This is the home page for Fred.
+  </h2>
+
+  <%= link_to "Sign up now!", '#', class: "btn btn-large btn-primary" %>
+</div>
