--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,3 +1,3 @@
-<% provide(:title, 'About') %>
-<h1>About</h1>
+<% provide(:title, 'About Us') %>
+<h1>About Us</h1>
 <p>This is a rails app that serves as a test bed and playground for Fred.</p>
