--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -4,27 +4,13 @@
 <div class="row">
   <div class="span6 offset3">
     <%= form_for @user do |f| %>
-      <%= render 'shared/error_messages' %>
-      <fieldset>
-
-      <%= f.label :name %>
-      <%= f.text_field :name %>
-
-      <%= f.label :email %>
-      <%= f.text_field :email %>
-
-      <%= f.label :password %>
-      <%= f.password_field :password %>
-
-      <%= f.label :password_confirmation, "Confirmation" %>
-      <%= f.password_field :password_confirmation %>
+      <%= render 'fields', form: f %>
 
       <div class="form-actions">
       <%= f.submit "Create my account", class: "btn btn-large btn-primary", id: "create" %>
       <%= f.button "Cancel", class: "btn offset1" %>
       </div>
 
-      </fieldset>
     <% end %>
   </div>
 </div>
