--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,11 +1,13 @@
 <footer class="footer">
-  <small>
-    Fred by <a href="https://github.com/rokob">rokob</a>
-  </small>
-  <nav>
-    <ul>
-      <li><%= link_to "About", about_path %></li>
-      <li><%= link_to "Contact", contact_path %></li>
-    </ul>
-  </nav>
+  <div class="container">
+    <small>
+      Fred by <a href="https://github.com/rokob">rokob</a>
+    </small>
+    <nav>
+      <ul>
+        <li><%= link_to "About", about_path %></li>
+        <li><%= link_to "Contact", contact_path %></li>
+      </ul>
+    </nav>
+  </div>
 </footer>
