--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,9 +1,13 @@
-<header class="navbar navbar-fixed-top navbar-inverse">
-  <div class="navbar-inner">
+<header class="navbar navbar-fixed-top navbar-inverse" role="navbar">
     <div class="container">
-      <%= link_to "fred", root_path, id: "logo" %>
-      <nav>
-        <ul class="nav pull-right">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+      </button>
+      <%= link_to "fred", root_path, id: "logo", class: "navbar-brand" %>
+      <nav class="collapse navbar-collapse">
+        <ul class="nav navbar-nav pull-right">
           <li><%= link_to "Home",    root_path %></li>
           <li><%= link_to "About",   about_path %></li>
 
@@ -28,5 +32,4 @@
         </ul>
       </nav>
     </div>
-  </div>
 </header>
