--- a/app/views/users/_fields.html.erb
+++ b/app/views/users/_fields.html.erb
@@ -1,13 +1,21 @@
 <%= render 'shared/error_messages' %>
 
-<%= form.label :name %>
-<%= form.text_field :name %>
+<div class="form-group">
+  <%= form.label :name %>
+  <%= form.text_field :name, class: "form-control" %>
+</div>
 
-<%= form.label :email %>
-<%= form.text_field :email %>
+<div class="form-group">
+  <%= form.label :email %>
+  <%= form.text_field :email, class: "form-control" %>
+</div>
 
-<%= form.label :password %>
-<%= form.password_field :password %>
+<div class="form-group">
+  <%= form.label :password %>
+  <%= form.password_field :password, class: "form-control" %>
+</div>
 
-<%= form.label :password_confirmation, "Confirmation" %>
-<%= form.password_field :password_confirmation %>
+<div class="form-group">
+  <%= form.label :password_confirmation, "Confirmation" %>
+  <%= form.password_field :password_confirmation, class: "form-control" %>
+</div>
