--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -2,14 +2,12 @@
 <h1>Sign up</h1>
 
 <div class="row">
-  <div class="span6 offset3">
+  <div class="col-md-6 col-md-offset-3">
     <%= form_for @user do |f| %>
       <%= render 'fields', form: f %>
 
-      <div class="form-actions">
-      <%= f.submit "Create my account", class: "btn btn-large btn-primary", id: "create" %>
-      <%= f.button "Cancel", class: "btn offset1" %>
-      </div>
+      <%= f.button "Create my account", class: "btn btn-lg btn-primary", id: "create" %>
+      <%= f.button "Cancel", class: "btn offset1", type: "cancel" %>
 
     <% end %>
   </div>
