--- a/app/views/comments/index.html.erb
+++ b/app/views/comments/index.html.erb
@@ -1,4 +1,4 @@
-<%# <div class="alert alert-success hide"></div> %>
+<div id="comment_notice" class="alert alert-success hide"></div>
 <%= react_component('CommentBox',
                     {:presenter => @presenter.to_json, :imgSrc => image_path('react_logo.png'), :imgAlt => 'REACT BRO'},
                     {:prerender => true}) %>
