--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,6 +1,9 @@
 <li>
   <%= gravatar_for(user, size: 52) %>
   <%= link_to user.name, user %>
+  <% if user.is_friends_with_current_user? %>
+    <span class="label label-info">Friends</span>
+  <% end %>
   <% if current_user.admin? && !current_user?(user) %>
     | <%= link_to "delete", user, method: :delete,
                                   data: { confirm: "You sure?" } %>
