--- a/app/views/friendships/friend_list.html.haml
+++ b/app/views/friendships/friend_list.html.haml
@@ -11,6 +11,6 @@
         = gravatar_for(user, size: 52)
         = link_to user.name, user
       .col-md-3.col-md-offset-6
-        = render 'friendships/actions', options: actions
+        = render 'friendships/actions', options: actions, subject: user, friendship_id: user.friendship_id
 
 = will_paginate @users
